--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,9 @@
-<h1>Register</h1>
+<h1>Welcome to Traveler</h1>
 
-<form name="user_info" action ='/user/create' method ='post'>
-	<input type ="text" name="first_name" placeholder = "First Name"><br>
-	<input type ="text" name="last_name" placeholder = "Last Name"><br>
-	<input type ="password" name="password" placeholder = "Password"><br>
-	<input type='submit' value='Register'>
-</form>
+<form action ='/user/' method='post'>
+	<input type ='text' name ='email' placeholder = 'Email Address'><br>
+	<input type ='password' name = 'password' placeholder = 'Password'><br>
+	<input type ='submit' value ='Login'>
+</form><br>
+
+<a href="/user/new">Register</a>
