all the routes and migration, models, sessions,and helpers

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Traveler</h1>
 
-<form action ='/user/' method='post'>
+<form action ='/user/login' method='post'>
 	<input type ='text' name ='email' placeholder = 'Email Address'><br>
 	<input type ='password' name = 'password' placeholder = 'Password'><br>
 	<input type ='submit' value ='Login'>
