--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 
-<form name= "login" action = " " method= "post">
+<form name= "login" action = "/user/login " method= "post">
 	<input type = "text" name = "user[email]" placeholder = "Email Address"><br>
 	<input type = "password" name = "user[password]" placeholder = "Password" ><br>
 	<input type = "submit" value ='Login'>
