--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -26,9 +26,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script>
-// In the following example, markers appear when the user clicks on the map.
-// The markers are stored in an array.
-// The user can then click an option to hide, show or delete the markers.
+
 var map;
 var markers = [];
 var location_lat = false;
@@ -44,21 +42,19 @@ function initialize() {
 	map = new google.maps.Map(document.getElementById('map-canvas'),
 	                          mapOptions);
 
-  // This event listener will call addMarker() when the map is clicked.
   google.maps.event.addListener(map, 'click', function(event) {
   	addMarker(event.latLng);
   });
 
-  // Adds a marker at the center of the map.
+
   addMarker(haightAshbury);
 }
 
-// Add a marker to the map and push to the array.
 function addMarker(location) {
 	var marker = new google.maps.Marker({
 		position: location,
 		map: map,
-    draggable:true //will add the ablility to drag the marker around the screen
+    draggable:true 
   });
 	$.ajax({
 		url: "http://maps.googleapis.com/maps/api/geocode/json?latlng=" + marker.position.k + ","  + marker.position.B,
@@ -69,44 +65,31 @@ function addMarker(location) {
 
 		location_lat = response.results[1].geometry.location.lat
 		location_long = response.results[1].geometry.location.lng
-
-		// console.log(location_lat);
-		// console.log(location_long);
 	})
 	markers.push(marker);
 }
 
-// Sets the map on all markers in the array.
+
 function setAllMap(map) {
 	for (var i = 0; i < markers.length; i++) {
 		markers[i].setMap(map);
 	}
 }
 
-// Removes the markers from the map, but keeps them in the array.
 function clearMarkers() {
 	setAllMap(null);
 }
 
-// Shows any markers currently in the array.
+
 function showMarkers() {
 	setAllMap(map);
 }
 
-// Deletes all markers in the array by removing references to them.
 function deleteMarkers() {
 	clearMarkers();
 	markers = [];
 }
-
 google.maps.event.addDomListener(window, 'load', initialize);
-
-
-		// 	var location_lat = response.results[1].geometry.location.lat
-		// var location_long = response.results[1].geometry.location.lng
-
-		// console.log(location_lat);
-		// console.log(location_long);
 
 		var access_token = "271040506.73a0892.1377628b149643e4af2cc615f424fbdf";
 
@@ -116,14 +99,11 @@ google.maps.event.addDomListener(window, 'load', initialize);
 			// grab my new list and then call a clear on it (.empty)
 			$('.button').click(function getPhotos(){
 				var mediaEndPoint = ("https://api.instagram.com/v1/media/search?lat=" + location_lat + "&lng=" + location_long + "&access_token=" + access_token);
-					// console.log(mediaEndPoint)
+
+				$(".my-new-list").empty();
+				
 
 				$.getJSON( mediaEndPoint, function( json_result ) {
-					// console.log(data)
-
-					// var instaLink = data.data[0].link
-					// console.log("I Am the InstaLink " + instaLink)
-					// returns the insagram link
 
 					var items = json_result["data"];
 					var container = []
@@ -141,51 +121,27 @@ google.maps.event.addDomListener(window, 'load', initialize);
 				});
 
 
-				// var invocation = new XMLHttpRequest();
-
-				// if (invocation){
-				// 	dataType: 'jsonp';
-				// 	invocation.open('GET',mediaEndPoint,true);
-				// 	invocation.withCredentials = true;
-				// 	invocation.onreadystatechange = handler;
-				// 	invocation.send();
-
-
-				// }
-				// function handler(evtXHR){
-				// 	if (invocation.readyState == 4)
-				// 	{
-				// 		if (invocation.status == 200)
-				// 		{
-				// 			var response = invocation.responseXML;
-
-				// 			alert("The Ajax call is working!");
-				// 		}
-				// 		else
-				// 			alert("Invocation Errors Occured");
-				// 	}
-
-				// };
-
 			});
-});
+		});
 
-</script>
-
-
-</head>
-<body>
-	<div id="panel">
-		<input onclick="clearMarkers();" type=button value="Hide Markers">
-		<input onclick="showMarkers();" type=button value="Show All Markers">
-		<input onclick="deleteMarkers();" type=button value="Delete Markers">
-	</div>
-	<div id="map-canvas"></div>
-	<!-- <p>Click on the map to add markers.</p> -->
-	<div class="button">
-		Get Photos
-	</div>
+		</script>
 
 
-</body>
-</html>
+	</head>
+	<body>
+		<div id="panel">
+			<input onclick="clearMarkers();" type=button value="Hide Markers">
+			<input onclick="showMarkers();" type=button value="Show All Markers">
+			<input onclick="deleteMarkers();" type=button value="Delete Markers">
+		</div>
+		<div id="map-canvas"></div>
+		<!-- <p>Click on the map to add markers.</p> -->
+		<div class="button">
+			Get Photos
+		</div>
+		
+
+
+
+	</body>
+	</html>
