--- a/public/css/application.css
+++ b/public/css/application.css
@@ -59,7 +59,8 @@
 	float: right;
 	margin: -11%  25% ;
 	font-family: helvetica;
-	font-size: 20px
+	font-size: 20px;
+	border-radius: 8px;
 }
 .info p1{
 	
@@ -114,7 +115,7 @@ html{
 	display:block;
 	margin:0 auto;
 
-	/* Animations: */
+	
 	-webkit-transition-timing-function: ease-in-out;
 	-webkit-transition-duration: .4s;
 	-webkit-transition-property: all;
