--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,9 +1,18 @@
-<h1>Sign-Up</h1>
+<div class= "register_page">
+	<div class="sign_up">
+		<h1>Sign-Up</h1>
+	</div>
+</div>
 
-<form name="user_info" action ='/user/new' method ='post'>
-	<input type ="text" name="user[first_name]" placeholder = "First Name"><br>
-	<input type ="text" name="useruser[last_name]" placeholder = "Last Name"><br>
-	<input type ="text" name="user[email]" placeholder = "Email Address"><br>
-	<input type ="password" name="user[password]" placeholder = "Password"><br>
-	<input type='submit' value='Register'>
-</form>
+	<div class= "register_field">
+	<form name="user_info" action ='/user/new' method ='post'>
+		<input type ="text" name="user[first_name]" placeholder = "First Name"><br>
+		<input type ="text" name="useruser[last_name]" placeholder = "Last Name"><br>
+		<input type ="text" name="user[email]" placeholder = "Email Address"><br>
+		<input type ="password" name="user[password]" placeholder = "Password"><br>
+		<div class="submit_reg">
+			<input type='submit' value='Register'>
+		</div>
+	</form>
+	<footer class ="reg_foot">.</footer>
+</div>
