--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,6 +1,6 @@
 
 .button {
-	margin:0 auto;
+	margin: 1% 31% 0% 45%;
 	width: 10%; 
 	border-top: 1px solid #96d1f8;
 	background: #65a9d7;
@@ -25,8 +25,8 @@
 	text-align: center;
 }
 .button:hover {
-	border-top-color: #782c29;
-	background: #782c29;
+	border-top-color: #336699;
+	background: #336699;
 	color: #ccc;
 }
 .button:active {
@@ -81,7 +81,7 @@
 	color:#FF0000;
 	font-style: italic;
 }
-	
+
 }
 html{
 	background-color: #FFFFFF
@@ -126,8 +126,8 @@ html{
 }
 
 .login_button:hover {
-	background-image: url('shot');
-	background-position: 65px 5px;
+	background-image: url('https://dh3vbjnk0bnfa.cloudfront.net/static/centralauth/images/btn-login-hover.png');
+	background-position: 70px 5px;
 	text-indent: 20px;  
 }
 
@@ -138,7 +138,7 @@ html{
 footer{
 	background-color: #484B4F;
 	padding: 10px;
-	margin: 21% 10%;
+	margin: 13% 10%%;
 	border-radius: 25px;
 	color: #484B4F;
 	text-align: center;
@@ -149,5 +149,52 @@ footer{
 }
 
 #login {
-  text-align: center;
+	text-align: center;
+}
+/*===========================================================*/
+/*===========================================================*/
+
+.sign_up{
+	background-color: #336699;
+	text-align: center;
+	color: white;
+	padding: 5px;
+	margin: auto 55px 0 55px;
+	border-radius: 25px;
+}
+
+.register_field{
+	border-radius: 10px;
+	color:#336699;
+	color: black;
+	margin: 2% 10% 0% 42%;
+}
+
+.submit_reg{
+	background-color: red;
+	color:#336699;
+	margin: 1% 88% 0% 11%;
+}
+.reg_foot{
+	background-color: #484B4F;
+	margin: 10% 0% 0% -65%;
+	color: #484B4F;
+}
+/*===========================================================*/
+/*===========================================================*/
+
+.welcome_header{
+	background-color: #336699;
+	text-align: center;
+	margin:4% 30% 1% 34%;
+	border-radius: 25px;
+	color: white;
+}
+
+ul.my-new-list{
+	background-color: #336699;
+	text-align: center;
+	border-radius: 25px;
+	margin: 1% 14% 0% 4%;
+	position: absolute;
 }
