--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,6 +1,7 @@
 <h1>Sign-Up</h1>
 
 <form name="user_info" action ='/user/new' method ='post'>
+    <!-- add labels for form inputs -->
 	<input type ="text" name="user[first_name]" placeholder = "First Name"><br>
 	<input type ="text" name="useruser[last_name]" placeholder = "Last Name"><br>
 	<input type ="text" name="user[email]" placeholder = "Email Address"><br>
