--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,8 +1,11 @@
+<!-- cannot have <h1> outside html document -->
 <h1>WELCOME</h1>
 
+<!-- html doctype and tags already supplied by layout -->
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- all this already supplied by layout -->
 	<title>Remove Markers</title>
 
 	<style>
@@ -27,6 +30,7 @@
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script>
 
+// clean up all this JS! separate files! put them at the bottom of the <body>!
 var map;
 var markers = [];
 var location_lat = false;
@@ -91,6 +95,7 @@ function deleteMarkers() {
 }
 google.maps.event.addDomListener(window, 'load', initialize);
 
+		// probably don't want access token hard-coded in JS; supply it via Ruby/ERB
 		var access_token = "271040506.73a0892.1377628b149643e4af2cc615f424fbdf";
 
 
@@ -109,6 +114,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 					var container = []
 					$.each( items, function(  ) {
 
+						// use dot notation
 						var val = this["images"]["standard_resolution"]["url"]
 
 						container.push( "<img src=" + val + ">" );
@@ -128,8 +134,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 
 	</head>
+	<!-- body already supplied by layout -->
 	<body>
 		<div id="panel">
+			<!-- don't use onclick attributes; use jquery to attach events to elements -->
 			<input onclick="clearMarkers();" type=button value="Hide Markers">
 			<input onclick="showMarkers();" type=button value="Show All Markers">
 			<input onclick="deleteMarkers();" type=button value="Delete Markers">
@@ -142,6 +150,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
 		
 
 
-
+	<!-- already supplied by layout -->
 	</body>
 	</html>
